Categories adaptive improved, z-index bug with header fixed

--- a/#source/scss/_header.scss
+++ b/#source/scss/_header.scss
@@ -3,6 +3,7 @@
 
 .header {
     background-color: $whiteColor;
+    z-index: 999;
     &__container {
         display: flex;
         @include adaptiveValue("gap", 32, 12);
